[package]
name = "cards"
version = "0.1.0"
authors = ["Ryan O'Beirne <robeirne@spoonflower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"

[[bin]]
name = "war"
path = "bin/war/main.rs"

[[bin]]
name = "gofish"
path = "bin/gofish/main.rs"
